--- a/java-垃圾回收/深入理解Java虚拟机/7-虚拟机类加载机制.ipynb
+++ b/java-垃圾回收/深入理解Java虚拟机/7-虚拟机类加载机制.ipynb
@@ -133,7 +133,7 @@
     "```\n",
     "\n",
     "#### 3. 子类加载器可以访问 parent 类加载加载的类，parent 类加载器加载的类不能访问子类加载器加载的类     \n",
-    "首先记住一个事实, 在用代码进行验证. 我们知道, 被装载的类由`类加载器对象`和`类全名`共同唯一标识, 换种说法就是, jvm所有加载的类, 被其类加载器分隔到不同的命名空间, 每个类加载器对象都有自己的命名空间, 子 classLoader 对象命名空间可以访问 parent classLoader 对象命名空间中的类, 反过来 parent 不能访问子 classLoader 对象命名空间中的类.   \n",
+    "首先记住一个事实, 这个事实能够成立是因为 ClassLoader 基类的 loadClass() 方法中的 parent 委派。下面用代码进行验证. 我们知道, 被装载的类由`类加载器对象`和`类全名`共同唯一标识, 换种说法就是, jvm所有加载的类, 被其类加载器分隔到不同的命名空间, 每个类加载器对象都有自己的命名空间, 子 classLoader 对象命名空间可以访问 parent classLoader 对象命名空间中的类, 反过来 parent 不能访问子 classLoader 对象命名空间中的类.   \n",
     "* 先让 MyClass1 由 AppClassLoader 加载, MyClass2 由自定义类加载器加载. 然后在 MyClass2 构造器中调用 `new MyClass1()`, 会报错, 表示 parent 类加载器加载的类找不到子 classLoader 加载的类. 报错如下:  \n",
     "\n",
     "```shell\n",
@@ -221,48 +221,186 @@
     "    }\n",
     "}\n",
     "```\n",
-    "\n",
-    "\n",
-    "#### 4. Thread 类中的 contextClassLoader\n",
-    "```java\n",
-    "private ClassLoader contextClassLoader\n",
-    "```\n",
-    "\n",
-    "#### 6. jdbc4.0 以后使用 SPI 跳过 Class.forName\n",
-    "\n",
-    "#### 5. ServiceLoader 与 SPI\n",
-    "\n",
-    "\n",
-    "\n",
-    "#### 7. springboot 自动装配与 SPI\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "#### 4. 什么是 SPI  \n",
+    "SPI 是jdk规定接口，厂商面向接口编程提供实现类，使用时，只要将厂商的实现 jar 包加入 classPath，就能自动判断使用接口包含实现类。方法为用 `ServiceLoader` 获取所有 classPath jar 包内的 `META-INF/services/fileName` 文件中定义的实现类全名。有两个问题：  \n",
+    "* （1）ServiceLoader 如何获取 classPath 下所有包含 META-INF/services/fileName 的 url？   \n",
+    "   使用 classLoader 对象的 `getResources()` 方法，返回可迭代的 url 枚举    \n",
+    "   ```java\n",
+    "    public static void test () throws IOException {\n",
+    "    //  jar:file:/home/lj/.m2/repository/mysql/mysql-connector-java/8.0.25/mysql-connector-java-8.0.25.jar!/META-INF/services/java.sql.Driver\n",
+    "    //  jar:file:/home/lj/.m2/repository/org/postgresql/postgresql/42.2.22/postgresql-42.2.22.jar!/META-INF/services/java.sql.Driver\n",
+    "        String url = \"META-INF/services/java.sql.Driver\";\n",
+    "        // 用某个 classLoader 对象, 在其查找范围内查找 url 枚举数组\n",
+    "        Enumeration<URL> enums = Thread.currentThread().getContextClassLoader().getResources(url);\n",
+    "        while(enums.hasMoreElements()){\n",
+    "            System.out.println(enums.nextElement());\n",
+    "        }\n",
+    "    }\n",
+    "    ```\n",
+    "* （2）ServiceLoader 用的是哪个 classLoader 对象来获取 url 的？  \n",
+    "   使用 `Thread.currentThread().getContextClassLoader()`，这个方法一般返回 AppClassLoader 对象。`contextClassLoader` 其实是 Thread 类的一个属性，这个属性在 jvm 创建线程时自动赋值，或者自己手动调用 `setContextClassLoader` 方法更改当前线程的 contextClassLoader\n",
+    "    ```java\n",
+    "    class Thread implements Runnable {\n",
+    "        /* The context ClassLoader for this thread */\n",
+    "        private ClassLoader contextClassLoader;\n",
+    "\n",
+    "        public void setContextClassLoader(ClassLoader cl) {\n",
+    "            ... ... \n",
+    "            this.contextClassLoader = cl;\n",
+    "        }\n",
+    "    }\n",
+    "    ```\n",
+    "\n",
+    "ServiceLoader 迭代器 LazyIterator 的 next 方法  \n",
+    "```java\n",
+    "class ServiceLoader {\n",
+    "    // 关键属性\n",
+    "    private LazyIterator lookupIterator = new LazyIterator(service, loader);  // 所有文件中配置的所有行的迭代器\n",
+    "    private ClassLoader loader = Thread.currentThread().getContextClassLoader()\n",
+    "    private LinkedHashMap<String,S> providers = new LinkedHashMap<>();  // 类名和实例化对象的缓存\n",
+    "\n",
+    "    private class LazyIterator{\n",
+    "        private S nextService() {\n",
+    "            if (!hasNextService())\n",
+    "                throw new NoSuchElementException();\n",
+    "            String cn = nextName;\n",
+    "            nextName = null;\n",
+    "            Class<?> c = null;\n",
+    "            try {\n",
+    "                // 用 Thread 中的 contextClassLoader 加载类\n",
+    "                c = Class.forName(cn, false, loader);\n",
+    "            } catch (ClassNotFoundException x) {\n",
+    "                // ... 省略 fail 异常处理\n",
+    "            }\n",
+    "            // ... 省略 fail 异常处理\n",
+    "            try {\n",
+    "            // contextClassLoader 加载好的类实例化出一个对象加入 ServiceLoader 的 providers 属性中\n",
+    "                S p = service.cast(c.newInstance());\n",
+    "                providers.put(cn, p);\n",
+    "                return p;\n",
+    "            } catch (Throwable x) {\n",
+    "                // ... 省略 fail 异常处理\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "【测试用例】：当 classPath 下同时加入 mysql 和 postgreSql 的驱动后，jar 包中配置的 spi 文件就能通过 ServiceLoader 访问到  \n",
+    "```java\n",
+    "// 测试代码\n",
+    "public static void main(String[] args) throws ClassNotFoundException, IOException {\n",
+    "    ServiceLoader<Driver> driverServices = ServiceLoader.load(Driver.class);\n",
+    "    Iterator<Driver> driversIterator = driverServices.iterator();\n",
+    "    try{\n",
+    "        while(driversIterator.hasNext()) {\n",
+    "            // ServiceLoader 暴露的迭代器在调用 next() 方法时，内部会执行 Class.forName\n",
+    "            Driver d = driversIterator.next();  \n",
+    "            System.out.println(d.getClass().newInstance());\n",
+    "        }\n",
+    "    } catch(Throwable t) {\n",
+    "    }\n",
+    "}\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. jdbc4.0 以后使用 SPI 跳过 Class.forName   \n",
+    "首先，之前使用 jdbc 需要调用 `Class.forName(\"com.mysql.cj.jdbc.Driver\")`,主要是为了调用 com.mysql.cj.jdbc.Driver 类的静态代码块，向 DriverManager 中注册自己的 Driver 化对象, 之后 DriverManager 的 getConnection，走的都是厂商自己 Driver 的方法    \n",
+    "```java\n",
+    "public class Driver extends NonRegisteringDriver implements java.sql.Driver {\n",
+    "\n",
+    "    static {\n",
+    "        try {\n",
+    "            java.sql.DriverManager.registerDriver(new Driver());\n",
+    "        } catch (SQLException E) {\n",
+    "            throw new RuntimeException(\"Can't register driver!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public Driver() throws SQLException {\n",
+    "        // Required for Class.forName().newInstance()\n",
+    "    }\n",
+    "}\n",
+    "```  \n",
+    "\n",
+    "JDBC4.0以后，可以省略这句 Class.forName()，直接调用 rt.jar 包中的 `DriverManager` 方法就能获取连接\n",
+    "```java\n",
+    "Connection conn = DriverManager.getConnection(\n",
+    "                \"jdbc:mysql://localhost:3306/adtl_test\" ,\n",
+    "                \"lj\" ,\"123456\" );\n",
+    "```   \n",
+    "原因是， DriverManager 的静态代码块中，使用 ServiceLoader 加载了 Driver.class 的厂商实现类, 并在 ServiceLoader 的迭代器迭代时，自动对文件中配置的实现类类名执行 Class.forName() ，执行注册方法。\n",
+    "```java\n",
+    "public class DriverManager {\n",
+    "    static {\n",
+    "        loadInitialDrivers();  // SPI\n",
+    "        println(\"JDBC DriverManager initialized\");\n",
+    "    }\n",
+    "    \n",
+    "    // SPI 方法\n",
+    "    private static void loadInitialDrivers() {\n",
+    "            ... // 省略 System.getProperty(\"jdbc.drivers\") 环境变量中获取\n",
+    "        AccessController.doPrivileged(new PrivilegedAction<Void>() {\n",
+    "            public Void run() {\n",
+    "                ServiceLoader<Driver> loadedDrivers = ServiceLoader.load(Driver.class);\n",
+    "                Iterator<Driver> driversIterator = loadedDrivers.iterator();\n",
+    "                try{\n",
+    "                    while(driversIterator.hasNext()) {\n",
+    "                // ServiceLoader 迭代器在调用 next() 时，会对文件中配置的类名执行 Class.forName() \n",
+    "                        driversIterator.next();\n",
+    "                    }\n",
+    "                } catch(Throwable t) {}\n",
+    "                \n",
+    "                return null;\n",
+    "            }\n",
+    "        });\n",
+    "\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "**为什么说 SPI 打破了双亲委派模型？**   \n",
+    "比如 jdbc4.0 中，DriverManager 类位于 rt.jar 包，由 BootStrapClassLoader 加载，理应无法加载 classpath 下的类，也就无法使用厂商自己实现的 Driver 对象。但是 ServiceLoader 使用线程中的 contextClassLoader 加载 classPath 下的 Driver 类，加载后执行静态代码块向 DriverManager 注册了自己的 Driver 对象，建立了对象见得引用关系，跳过了类加载的时机\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6. springboot 自动装配与 SPI"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
