--- a/java-垃圾回收/线上问题debug的一般步骤.ipynb
+++ b/java-垃圾回收/线上问题debug的一般步骤.ipynb
@@ -196,7 +196,7 @@
     "(1) 查看内存泄漏原因, 点击 `Leak Suspects` 选项卡即可    \n",
     "(2) `Top Consumers` 选项卡来查看最大对象报告      \n",
     "(3) `thread overview` 进行线程分析       \n",
-    "<img src=\"img/mat.jpeg\" width=\"95%\"/>\n",
+    "<img src=\"img/mat.png\" width=\"95%\"/>\n",
     "\n",
     " 日常开发中，内存泄漏是比较常见的事，并且比较隐蔽，需要开发者更加关注细节。常见原因比如:   \n",
     "(1) 每次请求都 new 对象，导致大量重复创建对象；   \n",
@@ -302,69 +302,6 @@
     "\n",
     "MetaSpace 导致的 full gc 一方面可能是元空间大小太小; 另一方面可能是在`循环中`使用了`CGLIB动态代理产生了新类`, 因为⼀个类是由这个类的`类加载器`加上`全限定名（由包名&类名组成)` 确定唯⼀性的, 而动态代理生成的类名是变化的, 导致类加载过多 "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -383,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
