--- a/大数据/spark大数据/spark组件/2-DataFrame,DataSet和Sql.ipynb
+++ b/大数据/spark大数据/spark组件/2-DataFrame,DataSet和Sql.ipynb
@@ -1046,13 +1046,15 @@
     "3. 总结: 窗口函数的使用方法为:    \n",
     "  1. sql版本: `OVER (PARTITION BY ... ORDER BY ... frame_type BETWEEN m PRECEDING AND n FOLLOWING)`  \n",
     "  2. DataFrame API版本:  \n",
+    "  \n",
     "```scala\n",
     "windowSpec = Window.partitionBy(...)\n",
     "                   .orderBy(...)\n",
     "// Defines a Window Specification with a ROW frame.\n",
     "windowSpec.rowsBetween(start, end)\n",
     "// Defines a Window Specification with a RANGE frame.\n",
-    "windowSpec.rangeBetween(start, end)```"
+    "windowSpec.rangeBetween(start, end)\n",
+    "```"
    ]
   },
   {
@@ -1254,14 +1256,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Apache Toree - Scala",
-   "language": "scala",
-   "name": "apache_toree_scala"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "file_extension": ".scala",
-   "name": "scala",
-   "version": "2.11.8"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
