--- a/大数据/hive常用参数配置.ipynb
+++ b/大数据/hive常用参数配置.ipynb
@@ -31,13 +31,22 @@
     "     --hiveconf mapreduce.reduce.memory.mb=10240 \n",
     "     --hiveconf mapreduce.reduce.java.opts=-Xmx9216m \n",
     "     --hiveconf hive.cli.print.header=true\n",
+    "```\n",
+    "\n",
+    "#### hive 开启map 端聚合\n",
+    "```bash\n",
+    "set hive.map.aggr=true;\n",
+    "set mapreduce.reduce.shuffle.memory.limit.percent=0.10;\n",
+    "set mapreduce.map.memory.mb=5120;\n",
+    "set mapreduce.map.java.opts=-Xmx4096m;\n",
+    "set mapred.reduce.tasks = 200;  # 加速处理用的\n",
     "```"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -51,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
