--- a/java-并发和并行编程/Java并发编程实践/14-条件等待-Condition和AQS.ipynb
+++ b/java-并发和并行编程/Java并发编程实践/14-条件等待-Condition和AQS.ipynb
@@ -16,12 +16,15 @@
     "\n",
     "#### 3. 如何进行高效的条件等待\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;为了突出高效的条件等待方法 ,先来介绍一些低效的条件等待方法. 如下方法效率依次增高, 直到最后一种方法效率为最高:  \n",
-    "一个统一的场景, `有界队列实现`; 有界队列的put和take往往包含一个前提条件,不能从空队列中获取元素, 也不能将元素放入已满的队列之中. 当条件不满足时, 可以阻塞直到对象进入正确的状态, 或抛出异常或返回一个错误状态. 如下是所有有界队列实现的父类, 定义了公用的`isFull()`和`isEmpty()`\n",
-    "<img src=\"img/aqs1.png\" width=\"85%\">\n",
-    "1. 方法一 : **将条件检测的失败状态传递给调用者(抛异常或返回一个错误值)**   \n",
+    "eg: 设想一个场景：`有界队列实现`; 有界队列的put和take往往包含一个前提条件,不能从空队列中获取元素, 也不能将元素放入已满的队列之中. \n",
+    "当条件不满足时, 可以阻塞直到对象进入正确的状态, 或抛出异常或返回一个错误状态. 如下是所有有界队列实现的父类, 定义了公用的`isFull()`和`isEmpty()`\n",
+    "<img src=\"img/aqs1.png\" width=\"850px\">\n",
+    "\n",
+    "*  方法一 : **条件检测失败后，立刻抛异常或返回一个错误码**   \n",
     "   该方法下, 如果条件依赖检查失败, 直接在方法中抛异常通知调用者. 这看起来实现简单, 但使用起来有2个问题\n",
     "    1. 依赖不满足只是当下不满足, 而不是发生了异常\n",
-    "    2. 调用者每次调用必须做好捕获异常的准备, 且在异常发生时主动重试<img src=\"img/aqs11.png\" width=\"60%\">\n",
+    "    2. 调用者每次调用必须做好捕获异常的准备, 且在异常发生时主动重试\n",
+    "    <table><tr><td><img src=\"img/aqs11.png\" width=\"550px\" style=\"float:left;\"></td> </tr> </table>  \n",
     "    3. 客户调用者捕获异常后, 可以有两种重试选择 :   \n",
     "        * 自行进入休眠   \n",
     "        catch块中进行`Thread.sleep()`\n",
@@ -47,11 +50,11 @@
     "            }\n",
     "        }\n",
     "        ```\n",
-    "* 方法二: **通过轮训和休眠的方式, 勉强的解决状态依赖问题**  \n",
+    "* 方法二: **轮训和休眠：循环进行条件检测**  \n",
     "    1. 该方法也是先进行条件检查, 然后执行方法; 但会在检查失败后自行重试      \n",
     "       首先, 状态条件的检查必须在锁的保护下进行.     \n",
     "       其次, 如果测试失败, 当前执行的线程应该释放锁并休眠一段时间, 让其他线程能够访问内部的buf; 当线程醒来后, 将重新请求锁并再次进行重试. 因而, 线程将反复的在条件检查,休眠,获取锁释放锁的等待过程中切换.     \n",
-    "    2. 该方法实际将跑出异常那个方法中, 调用者的重试逻辑放到了方法内部进行; 使方法内部处理重试逻辑, 客户端只负责简单调用.<img src=\"img/aqs12.png\" width=\"68%\">\n",
+    "    2. 该方法实际是把上一个“抛出异常“方法中, 调用者的重试逻辑放到了方法内部进行; 在方法内部处理重试逻辑, 客户端只负责简单调用.<table><tr><td><img src=\"img/aqs12.png\" width=\"650px\" style=\"float:left;\"></td> </tr> </table>\n",
     "    3. 睡眠时间间隔选择   \n",
     "       要选择合适的睡眠时间, 需要在响应性和CPU使用率之间权衡. 睡眠时间小, 响应性就高, 但消耗的CPU资源也高   \n",
     "    4. 展望  \n",
@@ -60,15 +63,17 @@
     "* 方法三: **使用条件队列**\n",
     "    1. 条件队列:    \n",
     "       条件队列的名字来源于: 使\"等待某个条件为真\"的线程加入到一个队列中.   \n",
-    "       一般队列中每个元素都是数据, 而**条件队列中每个元素是一个线程**\n",
-    "    2. 一个对象就是一个条件队列   \n",
-    "        * 正如每个对象都可以是一个锁一样, 每个对象也可以作为一个条件队列; 对象的wait(), notify()构成了使用内部条件队列的API   \n",
+    "       普通的队列中每个元素都是数据, 而**条件队列中每个元素是一个线程**\n",
+    "    2. 对象就是一个条件队列   \n",
+    "        * 正如任意对象都可以是一个锁一样,任意对象也可以作为一个条件队列; 所以`wait()`,` notify()` 被定义在 Object 最低基类中\n",
     "        * 对象的内置锁和内置条件队列是相互关联的, 要调用对象X内置条件队列的任意一个方法, 必须先持有对象X的内置锁. 这也是因为 \"等待由状态构成的条件\" 和 \"维护状态的一致性\" 两种机制必须紧密地绑定在一起\n",
     "        * wait():   \n",
     "            1. 会释放锁, 并请求操作系统挂起当前线程. 使其他线程能够获取这个锁并修改对象的状态.   \n",
     "            2. wait()醒来时, 将在返回之前重新获取锁.   \n",
-    "            3. wait()通常写在while循环内部. 由于代码可能出现bug, 线程不一定是在条件满足后醒来, 还可能在条件处于任意状态下被错误唤醒, 因此线程醒来后需要重新判断依赖条件是否为true  \n",
-    "        * 使用条件队列完成条件状态依赖, 和轮训休眠拥有相同的语义. 如果某个功能使用 \"轮训和休眠\" 无法完成, 那么使用条件队列也无法完成;<img src=\"img/aqs13.png\" width=\"70%\">"
+    "            3. wait()通常写在while循环内部. \n",
+    "                1. 防止代码可能出现的bug, 导致该线程被其他线程在错误状态下唤醒,  因此线程醒来后需要重新判断依赖条件是否为true  \n",
+    "                2. 因为 wait() 醒来后线程一定是持有锁的，所以如果唤醒后的这次条件检测为真，则该线程一定是在正确状态下继续执行的  \n",
+    "        * 使用条件队列完成条件状态依赖, 和轮训休眠拥有相同的语义. 如果某个功能使用 \"轮训和休眠\" 无法完成, 那么使用条件队列也无法完成;<table><tr><td><img src=\"img/aqs13.png\" width=\"650px\" style=\"float:left;\"></td> </tr> </table>"
    ]
   },
   {
@@ -76,8 +81,8 @@
    "metadata": {},
    "source": [
     "### 二. 使用条件队列的注意事项  \n",
-    "条件队列使得构建高响应性对的状态依赖类变得容易, 但很容易造成误用; 因此使用时必须注意以下几点  \n",
-    "#### 2.1 条件谓词\n",
+    "条件队列使得构建“高响应性状态依赖类“变得容易, 但很容易造成误用; 因此使用时必须注意以下几点  \n",
+    "#### 1. 条件谓词\n",
     "1. 什么是条件谓词   \n",
     "    * 条件谓词: 是使某个操作变为状态依赖操作的前提. 要想正确使用条件队列, 关键是找出对象在哪个条件谓词上等待  \n",
     "    * 有界队列中, 只有当缓存不为空的时候, take()才能执行, 否则必须等待; 因此, take()的条件谓词是\"队列不为空\"  \n",
@@ -87,52 +92,54 @@
     "   条件谓词是由类中各个状态变量构成的表达式  \n",
     "   \n",
     "3. 条件谓词如何实现条件等待  \n",
-    "    * 条件等待中有一个重要的三元组关系: 加锁; wait()方法; 条件谓词\n",
+    "    * 条件等待中有一个重要的`三元组关系`: 加锁; wait()方法; 条件谓词\n",
     "        * 锁加在状态变量上\n",
     "        * 状态变量表达式构成了条件谓词\n",
     "        * 一个条件谓词若判断为false, 则当前线程加入锁对应的条件队列并挂起\n",
     "    * 因为条件谓词中包含多个状态变量, 而这些状态变量需要由同一个锁来保护, 所以在判断条件谓词为true或false之前必须先持有这个锁   \n",
-    "    * 基于以上2点, `状态变量->条件谓词->条件等待队列->锁`之间的关系克表示如下<img src=\"img/aqs11122.png\" width=\"90%\">  \n",
+    "    * 基于以上2点, `状态变量->条件谓词->条件等待队列->锁`之间的关系克表示如下<img src=\"img/aqs11122.png\" width=\"850px\">  \n",
     "    \n",
-    "#### 2.2 过早唤醒\n",
+    "#### 2 过早唤醒\n",
     "1. 什么情况会引起过早唤醒(条件谓词不满足时就被唤醒)     \n",
     "由于条件队列可以和多个条件谓词配合使用, 因此, 当一个挂起在wait()上的线程被notifyALL()唤醒时, 并不意味着该线程正在等待的条件谓词变成了true \n",
-    " 而且wait()方法还能执行有限时间的挂起, 超市后自动就会唤醒. 因此, 将条件谓词的检查放在while循环中是必要的的\n",
+    " 而且wait()方法还能执行有限时间的挂起, 超时后自动就会唤醒. 因此, 将条件谓词的检查放在while循环中是必要的的\n",
     "\n",
-    "#### 2.3 丢失的信号\n",
+    "#### 3 丢失的信号\n",
     "1. wait()和notify()要有先后顺序?  \n",
-    " 如果线程A在一个条件队列上执行了notify(), 而线程B随后才在这个条件队列上等待, 那么线程B将不会被线程A唤醒, 只能等待下一个notify()信号到来. 这就是线程A的信号丢失\n",
+    " 如果线程A在一个条件队列上执行了notify(), 而线程B随后才在这个条件队列上等待, 那么线程B将不会被线程A唤醒, 只能等待下一个notify()信号到来. 这就使得线程A的唤醒信号丢失\n",
     "\n",
-    "#### 2.4 通知\n",
+    "#### 4 正确的通知 “唤醒”\n",
     "1. **条件等待的必要操作: 通知**  \n",
     "    1. 前面介绍的都是条件谓词的检查, 条件谓词不满足时线程加入条件队列进行等待; 还有另一半重要内容: 通知: \n",
     "        * notify() : 从条件列中选择一个线程唤醒\n",
     "        * notifyAll() : 把条件队列中所有的线程全部唤醒  \n",
     "    2. 发出通知的线程应该尽快释放锁  \n",
-    "       线程调用notify()后, 虽然唤醒了其它线程进入锁的争抢, 但并未释放锁; 所以应该尽快释放锁, 让其它线程能够立马争取锁, 争取成功的线程会从wait()处的代码唤醒  \n",
-    "    2. 上面的有界队列中, 如果队列为空, 则take()操作陷入等待, 当队列不为空时, take()操作返回; 因此必须确保每条会导致队列非空的操作都能发出一个通知, 通知take()可以返回了. 由于导致队列非空的操作时put(), 所以每次put()都要发起对条件队列的通知notifyAll()   \n",
+    "       线程调用`notify()`后, 并未释放锁, 只是唤醒了在该对象等待队列中挂起的线程, 这些现成立刻进入锁的争抢 ; 所以应该尽快释放锁, 让其它线程能够立马争取锁, 争取成功的线程会从wait()处的代码唤醒  \n",
+    "    2. 上面的有界队列中, 如果队列为空, 则take()操作陷入等待；当队列不为空时, take()的等待可以结束; 因此必须确保`每个会导致队列非空的操作`都能发出一个通知, 通知take()的等待可以返回了    \n",
+    "       导致队列非空的操作是`put()`, 所以每次put()都要发起对条件队列的通知notifyAll()   \n",
     "    \n",
-    "2. **使用notify()通知时危险的**   \n",
-    "  由于线程会因为不同的条件谓词不满足而进入同一个条件队列, 如果使用notify()通知而不是notifyAll()通知就会很危险, 因为单一的通知很容易导致类似于信号丢失的问题: \n",
+    "2. **使用notify()通知是危险的， 应该使用notifyAll()**   \n",
+    "  由于线程会因为不同的条件谓词，`组合判断`为不满足而进入同一个条件队列, 如果使用notify()通知而不是notifyAll()通知就会很危险, 因为单一的通知很容易导致类似于信号丢失的问题: \n",
     "    ``` \n",
     "    比如, 线程A在条件队列中等待条件谓词PA, 线程B在条件队列中等待条件谓词PB, 此时线程C执行一个notify(), JVM选择线程A唤醒, 但线程A发现条件谓词并不满足进而进入挂起等待, 而其实线程C的操作可以让条件谓词PB满足, 但是线程B没能被唤醒, 造成了线程C的通知丢失\n",
     "    ```\n",
-    "3. 单次通知(notify())的严格条件    \n",
+    "3. 单次通知(notify())能够使用的唯二条件    \n",
     "通过以上分析, 只有下面2个条件同时满足时, 才可以使用notify()进行通知: \n",
     "    * **只有1个条件谓词和条件队列相关**,\n",
     "    * **且条件变量上的每次通知最多只能唤醒一个线程**\n",
-    "    \n",
-    " 次时才能使用notify()发出通知\n",
+    "    此时才能使用notify()发出通知\n",
     "\n",
-    "3. **条件通知 - 使用条件优化notifyAll()通知**   \n",
-    "有些开发人员认为\"完全使用notifyAll()代替notify()\"是低效的, 大多数情况下这种低效影响很小, 但有时候可能很大. 比如: \n",
-    "```\n",
-    "假设有10个线程在条件队列上等待, 当某个线程执行notifyAll()后, 10个线程全部唤醒, 并在锁上进行竞争. 然而, 他们中的大多数唤醒后仍发现条件谓词不满足而又重回到挂起, 这会产生大量的上下文切换和锁竞争\n",
-    "```\n",
+    "4. **使用条件通知优化notifyAll()**   \n",
+    "有些开发人员认为\"完全使用notifyAll()代替notify()\"是低效的, 大多数情况下这种低效影响很小, 但少数情况下，影响可能很大. 比如: \n",
+    "    ```\n",
+    "    假设有10个线程在条件队列上等待, 当某个线程执行notifyAll()后, 10个线程全部唤醒, 并在锁上进行竞争. 然而, 他们中的大多数唤醒后仍发现条件谓词不满足而又重回到挂起, 这会产生大量的上下文切换和锁竞争\n",
+    "    ```\n",
     " 事实上, 条件等待版本的有界队列实现中, put()和take()的通知机制是保守的: 每当放入一个对象或从队列中取走一个对象就发起一次通知. 我们可以对其优化:\n",
     "     * 首先, 仅当队列从空变为非空时, 或者从满变为不满时才释放一个线程\n",
-    "     * 并且, 仅当put()或take()影响到这些状态转换时才发出通知<img src=\"img/aqs114.png\" width=\"70%\">\n",
-    " 条件通知(条件判断下的notifyAll())和单次通知(notify)可以提升性能但却很难实现, 因此使用时应当谨慎, 只有在保证程序在notifyAll()下已经正常执行后, 再使用这个优化措施"
+    "     * 并且, 仅当put()或take()影响到这些状态转换时才发出通知      \n",
+    "     <table style=\"border-collapse: collapse;\"><tr><td style=\"border: none;\"><img src=\"img/aqs114.png\" width=\"700px\" style=\"float:left;\"/></td> </tr> </table>\n",
+    "    \n",
+    "` 条件通知`(条件判断下的notifyAll())和`单次通知`(notify)可以提升性能但却很难实现, 因此使用时应当谨慎, 只有在保证程序在notifyAll()下已经正常执行后, 再使用这个优化措施"
    ]
   },
   {
@@ -144,19 +151,26 @@
     "\n",
     "#### 3.1 一个广义锁可以关联多个条件队列  \n",
     "1. 内置锁的弊端和内置锁notifyAll()的局限   \n",
-    "内置条件队列的一个缺陷时, 每个内置锁只能和一个内置条件队列关联. 像上面的有界队列, 多个线程可能会在同一个条件队列上等待不同的条件谓词, 这使得无法满足\"在调用notifyAll()时唤醒的的线程都是同一类型的需求\". 如果要编写带有多个条件谓词的并发对象, 就可以使用显式的Lock和Condition, 而不是内置锁和条件队列\n",
+    "    * 内置条件队列的一个缺陷是, 每个内置锁只绑定一个条件队列，导致不同语义的条件谓词下的不同类型的线程全都入到同一个等待队列。   \n",
+    "      比如，上面的有界队列实现,put() 和 get() 都调用了同一个 BoundedQueue 对象的` wait()`(this.wait)，但却是在等待2个条件谓词：队列非满(put阻塞的线程)，队列非空(get阻塞的线程)。\n",
+    "    * 同时，在调用notifyAll()无法唤醒同一类型的线程。      \n",
+    "      比如，上面的有界队列实现, put() 后调用 notifyAll() 会唤醒把 put ,take 两类线程都唤醒          \n",
     "\n",
-    "2. ReentrantLock与Condition对象  \n",
+    "因此，如果要编写带有多个条件谓词的并发对象, 就可以使用显式的Lock和Condition, 让1个Lock对象绑定多个Condition对象，实现**同一个锁，多个条件谓词（多个条件等待队列）**的语义\n",
+    "\n",
+    "2. ReentrantLock (锁) 与 Condition (条件谓词) 对象  \n",
     "    * 一个Condition和一个Lock关联在一起, 但是一个Lock可以和多个Condition关联在一起\n",
+    "    * `ReentrantLock#lock()` 用来阻塞所有线程中同步方法的执行；`Condition#signalAll()` 用来唤醒某一个条件谓词下等待的线程      \n",
     "    * 每个Condition代表一个条件队列, Conditiopn对象会继承Lock对象的公平性: 对于公平锁, 线程会依照FIFO的顺序从Condition.await()中被释放\n",
-    "    ```\n",
-    "    Condition对象的等待和通知方法分别是: await(),signal()和signalAll(). 但是因为Condition扩展了Object, 所以它也有wait()和notify()方法. 使用时一定要调用正确的方法 - await()和signal()\n",
-    "    ```\n",
+    "    * Condition对象的等待和通知方法分别是: `await()`,`signal()`和`signalAll()`. 但是因为Condition扩展了Object, 所以它也有wait()和notify()方法. 使用时一定要调用正确的方法 - await()和signal()  \n",
+    "        * `await()`: 同`Object#wait()` 一样，线程进入挂起等待后释放对应的 lock，线程收到通知切竞争到 lock 后才能继续执行      \n",
+    "        * `signalAll()`：同`Object#notifyAll()` 一样, 只唤醒其他 await 在该 condition 对象上的其他线程，不会释放锁，要在调用signalAll()后立刻调用`Lock#unlock()`释放锁    \n",
     "    \n",
     "3. Condition实现的有界队列  \n",
     "    * 因为有界队列有2个谓词, \"非空\"和\"非满\", 所以可以用2个条件谓词(2个Condition对象): notFull和notEmpty;   \n",
-    "      当队列为空时, take()挂起并等待notEmpty, 此时put()向notEmpty发送信号, 解除阻塞在take()中的线程   <img src=\"img/aqs21.png\" width=\"83%\">\n",
-    "    * 使用多个Condition时, 比分析一个使用单一内部队列加多个条件谓词的类简单的多. 通过把条件谓词分开并放入到2个等待线程集合中, Condition更容易满足单次通知的需求. signal()比signalAll()更高效, 它能极大的减少每次唤醒操作产生的上写文切换和锁请求次数\n",
+    "      当队列为空时, take()挂起并等待notEmpty, 此时put()向notEmpty发送信号, 解除阻塞在take()中的线程       \n",
+    "     <table><tr><td> <img src=\"img/aqs21.png\" width=\"750px\"  style=\"float:left;\"/></td> </tr> </table>      \n",
+    "    * 使用多个Condition时, 比分析一个使用单一内部队列加多个条件谓词的类简单的多. 通过把条件谓词分开并放入到2个等待线程集合中, Condition更容易满足`单次通知`的需求. signal()比signalAll()更高效, 它能极大的减少每次唤醒操作产生的上写文切换和锁请求次数\n",
     "    \n",
     "#### 3.2 RentrantLock和Semaphore的共性\n",
     "`RentrantLock`和`Semaphore`有很多共性:\n",
@@ -302,142 +316,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### 三. 几个问题: \n",
-    "#### 1. FutureTask如何实现阻塞版的get(), 等待任务完毕才能返回\n",
-    "1. java1.8中实现的FutureTask使用LockSupport实现任务的等待??  \n",
-    "    * (1) LockSupport中定义了线程阻塞,唤醒的方法; 定义了获取线程阻塞在哪个object上等方法\n",
-    "    * (2) `Unsafe`类的作用:\n",
-    "        1. 阻塞或唤醒线程 : \n",
-    "            * `public native  void park(boolean isAbsolute,long time)`\n",
-    "            * `public native  void unpark(Object thread)`\n",
-    "        2. 获得内存地址上的值 : \n",
-    "            * `public native double getDoubleVolatile(Object o,long offset)`\n",
-    "            * `public native float getFloat(long address)`\n",
-    "            * `public native float getFloat(Object o,long offset)`\n",
-    "        3. 修改内存地址的值\n",
-    "            * `public native  void putDouble(long address,double x)`\n",
-    "            * `public native  void putDouble(Object o,long offset,double x)`\n",
-    "\n",
-    "     上面几个方法中的offset值内存的偏移地址, 此外Unsafe中定义了不同数据类型的单个偏移地址. 比如\n",
-    "     ```java\n",
-    "     ARRAY_LONG_INDEX_SCALE = theUnsafe.arrayIndexScale(long[].class);\n",
-    "     ```\n",
-    "     \n",
-    "2. FutureTask阻塞版get()的实现        \n",
-    "    1. FutureTask对任务的状态做了定义, 每个状态都是一个volatile的int值.    \n",
-    "       <img src=\"img/futuretask1.png\" width=\"40%\">\n",
-    "    2. 再来看一下FutureTask内部的一些属性:\n",
-    "        ```java\n",
-    "        /** 定义任务 */\n",
-    "        private Callable<V> callable;\n",
-    "        /** 任务执行的结果, 供get()发挥 */\n",
-    "        private Object outcome; // non-volatile, protected by state reads/writes\n",
-    "        /** 执行任务的线程 */\n",
-    "        private volatile Thread runner;\n",
-    "        /** 等待获取get的线程栈 */\n",
-    "        private volatile WaitNode waiters;\n",
-    "        ```\n",
-    "    2. FutureTask的run方法 :   \n",
-    "       在线程池中的本地线程执行Callable的call方法\n",
-    "       ```java\n",
-    "        public void run() {\n",
-    "            if (state != NEW ||\n",
-    "                // 1. CAS设置该FutureTask的runner对象为当前线程 runnerOffset=UNSAFE.objectFieldOffset(k.getDeclaredField(\"runner\")\n",
-    "                !UNSAFE.compareAndSwapObject(this, runnerOffset, null, Thread.currentThread()))\n",
-    "                return;\n",
-    "            try {\n",
-    "                Callable<V> c = callable;\n",
-    "                if (c != null && state == NEW) {\n",
-    "                    V result;\n",
-    "                    boolean ran;\n",
-    "                    try {\n",
-    "                        result = c.call();  // 2. 执行任务\n",
-    "                        ran = true;\n",
-    "                    } catch (Throwable ex) {\n",
-    "                        result = null;\n",
-    "                        ran = false;\n",
-    "                        setException(ex);\n",
-    "                    }\n",
-    "                    if (ran)\n",
-    "                        set(result);\n",
-    "                }\n",
-    "            } finally {\n",
-    "                // runner must be non-null until state is settled to prevent concurrent calls to run()\n",
-    "                runner = null;\n",
-    "                // state must be re-read after nulling runner to prevent leaked interrupts\n",
-    "                int s = state;\n",
-    "                if (s >= INTERRUPTING)\n",
-    "                    handlePossibleCancellationInterrupt(s);\n",
-    "            }\n",
-    "        }\n",
-    "       ```\n",
-    "    2. get()方法首先判断当前任务的任务的状态:  \n",
-    "        * 如果还未运行完(<=Compiled), 则自旋等待任务运行完(awaitDone): 否则返回运行结果\n",
-    "            1. 在FutureTask结果的等待栈中加入一个新的节点WaitNode\n",
-    "            ```java\n",
-    "            static final class WaitNode {\n",
-    "                volatile Thread thread;\n",
-    "                volatile WaitNode next;\n",
-    "                WaitNode() { thread = Thread.currentThread(); }\n",
-    "            }\n",
-    "            ```\n",
-    "            2. 如果任务状态是COMPLETING, 表示还未运行完, 进入自旋等待(while(true){Thread.yield})\n",
-    "            ```java\n",
-    "            private int awaitDone(boolean timed, long nanos) throws InterruptedException {\n",
-    "                final long deadline = timed ? System.nanoTime() + nanos : 0L;  // 如果是有闲时间等待的话计算deadline\n",
-    "                WaitNode q = null;\n",
-    "                boolean queued = false;\n",
-    "                for (;;) {\n",
-    "                    if (Thread.interrupted()) {\n",
-    "                        removeWaiter(q);\n",
-    "                        throw new InterruptedException();\n",
-    "                    }\n",
-    "\n",
-    "                    int s = state;\n",
-    "                    if (s > COMPLETING) {\n",
-    "                        if (q != null)\n",
-    "                            q.thread = null;\n",
-    "                        return s;\n",
-    "                    }\n",
-    "                    else if (s == COMPLETING) // 还未运行完, 自旋等待\n",
-    "                        Thread.yield();\n",
-    "                    else if (q == null)\n",
-    "                        q = new WaitNode();\n",
-    "                    else if (!queued)\n",
-    "                        //像等待栈中加入一个节点. waitersOffset = UNSAFE.objectFieldOffset(k.getDeclaredField(\"waiters\"));\n",
-    "                        queued = UNSAFE.compareAndSwapObject(this, waitersOffset, q.next = waiters, q);\n",
-    "                    else if (timed) {\n",
-    "                        nanos = deadline - System.nanoTime();\n",
-    "                        if (nanos <= 0L) {\n",
-    "                            removeWaiter(q);\n",
-    "                            return state;\n",
-    "                        }\n",
-    "                        LockSupport.parkNanos(this, nanos);\n",
-    "                    }\n",
-    "                    else\n",
-    "                        LockSupport.park(this);\n",
-    "                    }\n",
-    "                }\n",
-    "            ```\n",
-    "    3.  cancel取消任务:\n",
-    "        因为runner属性记录了当前运行任务的线程, 所以调用运行任务线程的interupt()方法.所以, 只有在Callable的call()方法中设计了响应中断, 才能让cancel()方法生效. \n",
-    "        ```java\n",
-    "        while(Thread.currentThread().isInterrupted() && ! flag)\n",
-    "        ```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -451,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
