--- a/java-并发和并行编程/Java并发编程实践/15-原子变量和非阻塞同步机制.ipynb
+++ b/java-并发和并行编程/Java并发编程实践/15-原子变量和非阻塞同步机制.ipynb
@@ -11,13 +11,14 @@
     "    1. 悲观锁:   \n",
     "       锁独占是一项悲观技术, 它假设最坏情况(如果不锁门, 捣蛋鬼就会闯进物资搞得一团糟), 只有在确保其他线程不会对其进行干扰后才能执行下去  \n",
     "    2. 乐观锁:  \n",
-    "       这种方法首先进行冲突检查判断在更新过程中是否有来自其他线程的干扰, 如果存在, 这个操作失败, 并且继续重试\n",
+    "       这种方法首先进行冲突检查判断在更新过程中是否有来自其他线程的干扰, 如果存在, 这个操作失败, 并且继续重试   \n",
+    "       cas的实现方式相信, 线程竞争不会一直存在,一旦竞争出现空闲,就会有线程地原子修改成功,从而退出无限循环. cas 也相当于用循环重试完成条件等待\n",
     "3. **比较并交换CAS**\n",
     "    1. 大多数处理器架构中, 都有cas指令, 即\"我认为v的值是A, 如果是则将v的值更新为B, 否则不更新\"\n",
     "    2. CAS操作失败时, 不再次进行尝试而是什么不做, 这种做法是可取的; 因为在非阻塞算法中, 如下面的非阻塞链表or队列, 如果cas失败, 意味着其他线程完成了你要执行的操作.  \n",
     "    3. CAS在大多数情况下都能执行成功(所竞争不激烈的情况下), 因此硬件能够准确地预测while循环内的分支, 将复杂控制逻辑的开销降到最低\n",
     "4. **使用CAS维持多个变量的不可变性条件**\n",
-    "<img src=\"img/cas.png\" width=\"80%\">"
+    "<img src=\"img/cas.png\" width=\"700px\">"
    ]
   },
   {
@@ -39,7 +40,67 @@
     "        1. 先获取新栈顶top.next\n",
     "        2. 更新top指针, 若top和获取top.next时的top一样, 说明获取新栈顶的操作没发生其他操作, 则cas更新top  \n",
     "        \n",
-    "<img src=\"img/concurrentStack2.png\" width=\"83%\">\n",
+    "<img src=\"img/concurrentStack2.png\" width=\"700px\">\n",
+    "\n",
+    "```java\n",
+    "/**\n",
+    " * CAS 实现的栈: 只需要原子修改1个指针: top\n",
+    " * (top.next实际是新节点.next,属于本线程自己的操作)\n",
+    " */\n",
+    "public class ConcurrentStack<E> {\n",
+    "    private AtomicReference<Node<E>> top;\n",
+    "\n",
+    "    public ConcurrentStack() {\n",
+    "        this.top = new AtomicReference<>();\n",
+    "    }\n",
+    "\n",
+    "    static class Node<E> {\n",
+    "        private final E elem;\n",
+    "        private Node<E> next;\n",
+    "\n",
+    "        public Node(E elem) {\n",
+    "            this.elem = elem;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "     * CAS实现一个并发方法,首先要把这个方法分成2类操作:(1)本线程自己的操作(2)多线程的cas原子修改\n",
+    "     * do{\n",
+    "     * // 循环体: 本线程自己的操作\n",
+    "     * } while(\n",
+    "     * // 循环体内: cas原子操作是否成功\n",
+    "     * )\n",
+    "     */\n",
+    "    public void push(E ele) {\n",
+    "        Node node = new Node(ele); // 新节点构建放在外层,避免频繁 gc\n",
+    "        Node<E> oldTop;\n",
+    "        do {\n",
+    "            // 本线程自己的操作: 构建新节点, 新节点的 next 指向老 top\n",
+    "            oldTop = this.top.get();\n",
+    "            node.next = oldTop;\n",
+    "        } while (\n",
+    "            // 多线程cas操作: 修改站定为新构建的节点\n",
+    "                !top.compareAndSet(oldTop, node)\n",
+    "        );\n",
+    "    }\n",
+    "\n",
+    "    public E pop() {\n",
+    "        E val;  // 待返回的值\n",
+    "        Node next;\n",
+    "        Node<E> oldTop;\n",
+    "        do {\n",
+    "            // 本线程自己的操作: 获取老top的值返回\n",
+    "            oldTop = top.get();\n",
+    "            next = oldTop.next;\n",
+    "            val = oldTop.elem;\n",
+    "        } while (\n",
+    "            // cas 原子操作: 修改 top 指针指向 top.next\n",
+    "                top.compareAndSet(oldTop, next)\n",
+    "        );\n",
+    "        return val;\n",
+    "    }\n",
+    "}\n",
+    "```\n",
     "\n",
     "#### 2.2 **非阻塞的队列**\n",
     "1. 难度更大的非阻塞队列  \n",
@@ -60,12 +121,79 @@
     "     2. 不存在另一个线程执行更新操作:  \n",
     "         先后完成自己的2个指针的更新操作, tail.next和tail指针的更新  \n",
     "         \n",
-    "<img src=\"img/concurrentLinkedQueue2.png\">\n",
+    "<img src=\"img/concurrentLinkedQueue2.png\" width=\"800px\">\n",
+    "\n",
+    "```java\n",
+    "public class ConcurrentQueue<E> {\n",
+    "    private final AtomicReference<Node<E>> tail;\n",
+    "\n",
+    "    public ConcurrentQueue() {\n",
+    "        this.tail = new AtomicReference<>();\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "     * 构成队列节点\n",
+    "     */\n",
+    "    static class Node<E> {\n",
+    "        private final E elem;\n",
+    "        private AtomicReference<Node<E>> next;\n",
+    "        public Node(E elem) {\n",
+    "            this.elem = elem;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "     * 插入操作:\n",
+    "     * 本线程操作: 没有 (创建新节点的操作, 为了避免频繁 gc 放到了循环外)\n",
+    "     * 多线程 cas 原子操作, 有2步:\n",
+    "     * 1) tail.next = node; 2) tail = node;\n",
+    "     */\n",
+    "    public boolean put(E ele) {\n",
+    "        Node<E> node = new Node<>(ele);\n",
+    "        while (true) {\n",
+    "            Node<E> tailNode = this.tail.get();\n",
+    "            Node<E> next = tailNode.next.get();\n",
+    "            if (tail.get() == tailNode){  // 如果发现 tail 指针已经发生变化,说明有其他线程完成了2步修改, 本线程直接进入下一次循环即可\n",
+    "                if(next != null){  // 说明有其他线程完成了第一步: 修改了tail.next,但那个线程还没修改第二步tail, 可能是因为时间片轮转了, 所以让本线程替他完成 tail 的修改\n",
+    "                    tail.compareAndSet(tailNode,next);\n",
+    "                } else {  // 两步修改没有其他线程执行, 则进行 cas 操作这两步\n",
+    "                    if(tailNode.next.compareAndSet(null,node)){// 第一步: tail.next = node\n",
+    "                        if (tail.compareAndSet(tailNode,node)) { // 第二步: tail = node\n",
+    "                            return true;   // 因为是无界队列, 所以永远会返回 true\n",
+    "                        }\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "```\n",
     "\n",
     "3. JDK的ConcurrentLinkedQueue中的算法   \n",
-    " JDK的ConcurrentLinkedQueue中的算有一个改进是: 并未使用原子引用 AtomicReference<Node<E>> 表示每个Node, 而是使用普通的volatile类型引用, 并通过基于反射的 AtomicReferenceFieldUpdater 来更新next引用.使用这个方法更新有点繁琐, 但完全是为了提升性能  \n",
-    "    <img src=\"img/atomicReferenceFieldUpdater2.png\" width=\"80%\">"
+    " JDK的ConcurrentLinkedQueue中的算有一个改进是: 并未使用原子引用 AtomicReference<Node<E>> 来修改 `tail` 和 `tail.next`, 而是把他们都设置成 volatile 的变量, 然后计算属性在对象中的偏移量, 用Unsafe 进行 cas 修改\n",
+    "```java\n",
+    "public class ConcurrentLinkedQueue<E> {\n",
+    "    private transient volatile Node<E> tail;\n",
+    "    private static final long tailOffset;\n",
+    "    static {\n",
+    "       ...\n",
+    "            tailOffset = UNSAFE.objectFieldOffset\n",
+    "    }\n",
+    "    \n",
+    "    private boolean casTail(Node<E> cmp, Node<E> val) {\n",
+    "        return UNSAFE.compareAndSwapObject(this, tailOffset, cmp, val);\n",
+    "    }\n",
+    "}    \n",
+    "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
